Replaced "projekt" with "screening"
# Conflicts:
#	CHANGELOG.md

--- a/config/sync/language/da/core.entity_form_display.node.project.default.yml
+++ b/config/sync/language/da/core.entity_form_display.node.project.default.yml
@@ -1,6 +1,6 @@
 third_party_settings:
   field_group:
     group_project_information:
-      label: Projektinformation
+      label: Screeningsinformation
     group_state:
       label: Tilstand
