--- a/config/sync/language/da/webform.webform.ethics_default.yml
+++ b/config/sync/language/da/webform.webform.ethics_default.yml
@@ -129,7 +129,7 @@ elements: |-
     3_1_ressourceforbrug:
       '#type': text_format
       '#title': '3.1 Ressourceforbrug'
-      '#help': '<p>AI-løsninger bruger strøm, ikke mindst under træning, og vand til køling. Det er derfor vigtigt, at løsningernes ressourceforbrug står mål med de forventede udbytter, og at løsningerne i øvrigt er tilrettelagt ud fra en ressourceoptimerende tilgang (eks. krav til grøn strøm og genanvendelse af varmeudledning).</p><p>I svaret skal der redegøres for, om det er overvejet at anvende mindre ressourcekrævende løsinger end AI til indfrielse af projektets formål.</p>'
+      '#help': '<p>AI-løsninger bruger strøm, ikke mindst under træning, og vand til køling. Det er derfor vigtigt, at løsningernes ressourceforbrug står mål med de forventede udbytter, og at løsningerne i øvrigt er tilrettelagt ud fra en ressourceoptimerende tilgang (eks. krav til grøn strøm og genanvendelse af varmeudledning).</p><p>I svaret skal der redegøres for, om det er overvejet at anvende mindre ressourcekrævende løsinger end AI til indfrielse af screeningens formål.</p>'
       '#help_display': element_before
       '#allowed_formats':
         simple_editor: simple_editor
