--- a/config/translations/config.da.po
+++ b/config/translations/config.da.po
@@ -177,7 +177,7 @@ msgid "m/d/Y - H:i"
 msgstr ""
 
 msgctxt "core.entity_form_display.node.project.default:third_party_settings:field_group:group_project_information:label"
-msgid "Projektinformation"
+msgid "Screeningsinformation"
 msgstr ""
 
 msgctxt "core.entity_form_display.node.project.default:third_party_settings:field_group:group_state:label"
@@ -253,7 +253,7 @@ msgid "Department"
 msgstr "Magistrat"
 
 msgctxt "field.field.node.project.field_department:description"
-msgid "Hvilken magistratsafdeling hører projektet under"
+msgid "Hvilken magistratsafdeling hører screeningen under"
 msgstr ""
 
 msgctxt "field.field.node.project.field_description:label"
@@ -262,7 +262,7 @@ msgstr "Beskrivelse"
 
 msgctxt "field.field.node.project.field_project_state:label"
 msgid "Project state"
-msgstr "Projekttilstand"
+msgstr "Screeningstilstand"
 
 msgctxt "field.field.node.static.field_text:label"
 msgid "Text"
@@ -411,7 +411,7 @@ msgstr ""
 
 msgctxt "node.type.project:name"
 msgid "Project"
-msgstr "Projekt"
+msgstr "Screening"
 
 msgctxt "node.type.static:name"
 msgid "Static"
@@ -593,7 +593,7 @@ msgstr "Magistrat"
 
 msgctxt "taxonomy.vocabulary.project_track_type:name"
 msgid "Project track type"
-msgstr "Projektspor type"
+msgstr "Screeningsspor type"
 
 msgctxt "taxonomy.vocabulary.project_track_type:description"
 msgid ""
@@ -1861,7 +1861,7 @@ msgid "Nodes"
 msgstr ""
 
 msgctxt "views.view.projects:label"
-msgid "Projekter"
+msgid "Screeninger"
 msgstr ""
 
 msgctxt "views.view.projects:display:default:display_title"
@@ -1869,7 +1869,7 @@ msgid "Default"
 msgstr ""
 
 msgctxt "views.view.projects:display:default:display_options:title"
-msgid "Projekter"
+msgid "Screeninger"
 msgstr ""
 
 msgctxt "views.view.projects:display:default:display_options:fields:nid:label"
@@ -1917,7 +1917,7 @@ msgstr "Magistrat"
 
 msgctxt "views.view.projects:display:default:display_options:fields:name:label"
 msgid "Project owner"
-msgstr "Projektejer"
+msgstr "Screeningsejer"
 
 msgctxt "views.view.projects:display:default:display_options:pager:options:tags:first"
 msgid "« Første"
@@ -1977,7 +1977,7 @@ msgstr "Søg"
 
 msgctxt "views.view.projects:display:default:display_options:filters:combine:expose:description"
 msgid "Filter on project title, description or project owner"
-msgstr "Filtrér på projekttitel, beskrivelse eller projektejer"
+msgstr "Filtrér på screeningstitel, beskrivelse eller screeningsejer"
 
 msgctxt "views.view.projects:display:default:display_options:filters:field_department_target_id:expose:label"
 msgid "Department"
@@ -2004,7 +2004,7 @@ msgid "Page"
 msgstr "Side"
 
 msgctxt "views.view.projects:display:page_1:display_options:menu:title"
-msgid "Projekter"
+msgid "Screeninger"
 msgstr ""
 
 msgctxt "views.view.taxonomy_term:label"
@@ -3142,11 +3142,11 @@ msgid ""
 "  '#type': webform_wizard_page\n"
 "  '#title': "
 "Kompleksitet\n"
-"  hvor_stor_er_projektorganisationen:\n"
+"  hvor_stor_er_screeningsorganisationen:\n"
 "    '#type': "
 "ai_screening_weighted_radios\n"
 "    '#title': 'Hvor stor er "
-"projektorganisationen?'\n"
+"screeningsorganisationen?'\n"
 "    '#options':\n"
 "      '10,0': '1-5 "
 "personer'\n"
@@ -3158,11 +3158,11 @@ msgid ""
 "personer'\n"
 "    '#options__properties': ''\n"
 "  "
-"hvor_stor_er_projektets_indflydelse_paa_forretningsstrategiske_m:\n"
+"hvor_stor_er_screeningens_indflydelse_paa_forretningsstrategiske_m:\n"
 "   "
 " '#type': ai_screening_weighted_radios\n"
 "    '#title': 'Hvor stor er "
-"projektets indflydelse på forretningsstrategiske mål?'\n"
+"screeningens indflydelse på forretningsstrategiske mål?'\n"
 "    "
 "'#options':\n"
 "      '10,0': Uvæsentlig\n"
@@ -3175,11 +3175,11 @@ msgid ""
 "'1,0': Afgørende\n"
 "    '#options__properties': ''\n"
 "  "
-"hvad_er_den_geografiske_distribution_af_projektorganisationen:\n"
+"hvad_er_den_geografiske_distribution_af_screeningsorganisationen:\n"
 "    "
 "'#type': ai_screening_weighted_radios\n"
 "    '#title': 'Hvad er den "
-"geografiske distribution af projektorganisationen?'\n"
+"geografiske distribution af screeningsorganisationen?'\n"
 "    "
 "'#options':\n"
 "      '10,0': 'Samme bygning'\n"
@@ -3192,16 +3192,16 @@ msgid ""
 "    '#options__properties': "
 "''\n"
 "  "
-"har_projektorganisationen_erfaring_med_de_involverede_teknologie:\n"
+"har_screeningsorganisationen_erfaring_med_de_involverede_teknologie:\n"
 "   "
 " '#type': ai_screening_weighted_radios\n"
 "    '#title': 'Har "
-"projektorganisationen erfaring med de involverede teknologier?'\n"
+"screeningsorganisationen erfaring med de involverede teknologier?'\n"
 "    "
 "'#options':\n"
 "      '10,0': 'Etablerede eksperter'\n"
 "      '7,0': 'Har "
-"gennemført projekter med samme teknologi med ekstern bistand'\n"
+"gennemført screeninger med samme teknologi med ekstern bistand'\n"
 "      "
 "'5,0': 'Har gennemført pilotforløb med teknologien'\n"
 "      '3,0': "
@@ -3210,11 +3210,11 @@ msgid ""
 "med teknologien'\n"
 "    '#options__properties': ''\n"
 "  "
-"hvilke_organisatoriske_afhaengigheder_er_der_i_projektafviklinge:\n"
+"hvilke_organisatoriske_afhaengigheder_er_der_i_screeningsafviklinge:\n"
 "   "
 " '#type': ai_screening_weighted_radios\n"
 "    '#title': 'Hvilke "
-"organisatoriske afhængigheder er der i projektafviklingen?'\n"
+"organisatoriske afhængigheder er der i screeningsafviklingen?'\n"
 "    "
 "'#options':\n"
 "      '10,0': Ingen\n"
@@ -3227,11 +3227,11 @@ msgid ""
 "'1,0': 'Skal være del af et program'\n"
 "    '#options__properties': "
 "''\n"
-"  hvilke_tekniske_afhaengigheder_er_der_i_projektafviklingen:\n"
+"  hvilke_tekniske_afhaengigheder_er_der_i_screeningsafviklingen:\n"
 "  "
 "  '#type': ai_screening_weighted_radios\n"
 "    '#title': 'Hvilke "
-"tekniske afhængigheder er der i projektafviklingen?'\n"
+"tekniske afhængigheder er der i screeningsafviklingen?'\n"
 "    "
 "'#options':\n"
 "      '10,0': Ingen\n"
@@ -3240,9 +3240,9 @@ msgid ""
 "      '5,0': 'Større ændringer i "
 "etablerede platforme'\n"
 "      '3,0': 'Flere essentielle leverancer fra "
-"andet projekt'\n"
+"anden screening'\n"
 "      '1,0': 'Flere essentielle leverancer til/fra "
-"andre projekter'\n"
+"andre screeninger'\n"
 "    '#options__properties': ''\n"
 "usikkerhed:\n"
 "  "
@@ -3292,11 +3292,11 @@ msgid ""
 "udviklingsindsats​.'\n"
 "    '#options__properties': ''\n"
 "  "
-"hvor_lang_tid_vil_projektet_formodentligt_straekke_sig_over:\n"
+"hvor_lang_tid_vil_screeningen_formodentligt_straekke_sig_over:\n"
 "    "
 "'#type': ai_screening_weighted_radios\n"
 "    '#title': 'Hvor lang tid "
-"vil projektet formodentligt strække sig over?'\n"
+"vil screeningen formodentligt strække sig over?'\n"
 "    '#options':\n"
 "   "
 "   '0,10': '0-6 uger'\n"
@@ -3307,11 +3307,11 @@ msgid ""
 "      '0,1': '25+ uger'\n"
 "    "
 "'#options__properties': ''\n"
-"  hvordan_er_projektet_scopet:\n"
+"  hvordan_er_screeningen_scopet:\n"
 "    "
 "'#type': ai_screening_weighted_radios\n"
 "    '#title': 'Hvordan er "
-"projektet scopet?'\n"
+"screeningen scopet?'\n"
 "    '#options':\n"
 "      '0,10': 'Klar og "
 "velstruktureret tidsplan,​ veldefineret omfang.'\n"
@@ -3647,7 +3647,7 @@ msgid ""
 "ressourceoptimerende tilgang (eks. krav til grøn strøm og "
 "genanvendelse af varmeudledning).</p><p>I svaret skal der redegøres "
 "for, om det er overvejet at anvende mindre ressourcekrævende "
-"løsinger end AI til indfrielse af projektets formål.</p>'\n"
+"løsinger end AI til indfrielse af screeningens formål.</p>'\n"
 "    "
 "'#help_display': element_before\n"
 "    '#allowed_formats':\n"
