--- a/web/modules/custom/ai_screening_project/translations/ai_screening_project.da.po
+++ b/web/modules/custom/ai_screening_project/translations/ai_screening_project.da.po
@@ -25,11 +25,11 @@ msgstr ""
 
 #: modules/custom/ai_screening_project/ai_screening_project.info.yml:0
 msgid "AI Screening project"
-msgstr "AI Screening projekt"
+msgstr "AI Screening-screening"
 
 #: modules/custom/ai_screening_project/ai_screening_project.info.yml:0
 msgid "Functionality related to creating and maintaining the project content type and related entities."
-msgstr "Funktionalitet relateret til oprettelse og vedligehold af af projektindholdstype og relaterede entiteter."
+msgstr "Funktionalitet relateret til oprettelse og vedligehold af af screeningsindholdstype og relaterede entiteter."
 
 #: modules/custom/ai_screening_project/ai_screening_project.info.yml:0 modules/custom/ai_screening_project/src/Plugin/Block/FrontpageStatsTopBlock.php:21
 msgid "Custom"
@@ -37,31 +37,31 @@ msgstr "Tilpasset"
 
 #: modules/custom/ai_screening_project/ai_screening_project.routing.yml:0
 msgid "Confirm Project Changes"
-msgstr "Bekræft projekt ændringer"
+msgstr "Bekræft screeningsændringer"
 
 #: modules/custom/ai_screening_project/src/BreadcrumbBuilder.php:68
 msgid "Projects"
-msgstr "Projekter"
+msgstr "Screeninger"
 
 #: modules/custom/ai_screening_project/src/BreadcrumbBuilder.php:71
 msgid "Create new project"
-msgstr "Oprt nyt projekt"
+msgstr "Opret ny screening"
 
 #: modules/custom/ai_screening_project/src/Form/ProjectNodeConfirmForm.php:65
 msgid "Are you sure you want to save the project \"@title\"?"
-msgstr "Er du sikker på at du vil gemme projektet \"@title\"?"
+msgstr "Er du sikker på at du vil gemme screeningen \"@title\"?"
 
 #: modules/custom/ai_screening_project/src/Form/ProjectNodeConfirmForm.php:79
 msgid "Deactivating a project will disable further work on the project and archive it. Reactivation of the project requires site administrative privileges."
-msgstr "Deaktivering af projektet vil forhindre yderligere arbejde på projektet og arkivere det. Reaktivering af projektet kræver administrator adgang på sitet."
+msgstr "Deaktivering af screeningen vil forhindre yderligere arbejde på screeningen og arkivere det. Reaktivering af screeningen kræver administrator adgang på sitet."
 
 #: modules/custom/ai_screening_project/src/Form/ProjectNodeConfirmForm.php:86
 msgid "Save project"
-msgstr "Gem projekt"
+msgstr "Gem screening"
 
 #: modules/custom/ai_screening_project/src/Form/ProjectNodeConfirmForm.php:114
 msgid "Project \"@title\" has been updated."
-msgstr "Projekt \"@title\" er blevet opdateret."
+msgstr "Screening \"@title\" er blevet opdateret."
 
 #: modules/custom/ai_screening_project/src/Helper/ProjectHelper.php:239
 msgid "Corrupted"
@@ -69,7 +69,7 @@ msgstr "Beskadiget"
 
 #: modules/custom/ai_screening_project/src/Helper/ProjectHelper.php:240
 msgid "If the project or related entities are corrupted."
-msgstr "Hvis projektet eller relaterede entiteter er beskadiget."
+msgstr "Hvis screeningen eller relaterede entiteter er beskadiget."
 
 #: modules/custom/ai_screening_project/src/Helper/ProjectHelper.php:356
 msgid "Project group"
@@ -77,7 +77,7 @@ msgstr "Projectgruppe"
 
 #: modules/custom/ai_screening_project/src/Helper/ProjectHelper.php:361
 msgid "Project owner"
-msgstr "Projektejer"
+msgstr "Screeningsejer"
 
 #: modules/custom/ai_screening_project/src/Helper/ProjectHelper.php:370
 msgid "Contributors"
@@ -85,15 +85,15 @@ msgstr "Bidragydere"
 
 #: modules/custom/ai_screening_project/src/Helper/ProjectHelper.php:371
 msgid "Which users are allowed to contribute to this project"
-msgstr "Hvilke brugere har tilladelse til at bidrage til dette projekt"
+msgstr "Hvilke brugere har tilladelse til at bidrage til denne screening"
 
 #: modules/custom/ai_screening_project/src/Helper/ProjectHelper.php:398
 msgid "Project owner must be a contributor."
-msgstr "Projektejeren skal være bidragyder."
+msgstr "Screeningsejeren skal være bidragyder."
 
 #: modules/custom/ai_screening_project/src/Helper/ProjectHelper.php:158
 msgid "Error deleting project: @message"
-msgstr "Fejl ved sletning af projekt: @message"
+msgstr "Fejl ved sletning af screening: @message"
 
 #: modules/custom/ai_screening_project/src/Helper/ProjectHelper.php:181
 msgid "Error deleting corrupted nodes: @message"
@@ -105,7 +105,7 @@ msgstr "Fejl ved oprettelse af grupper: @message"
 
 #: modules/custom/ai_screening_project/src/Helper/ProjectHelper.php:574
 msgid "Error creating project tracks: @message"
-msgstr "Fejl ved oprettelse af projektspor: @message"
+msgstr "Fejl ved oprettelse af screeningsspor: @message"
 
 #: modules/custom/ai_screening_project/src/Plugin/Block/FrontpageStatsTopBlock.php:20
 msgid "Frontpage stats top"
