--- a/web/modules/custom/ai_screening_project_track/translations/ai_screening_project_track.da.po
+++ b/web/modules/custom/ai_screening_project_track/translations/ai_screening_project_track.da.po
@@ -39,7 +39,7 @@ msgstr ""
 
 #: modules/custom/ai_screening_project_track/ai_screening_project_track.install:15 modules/custom/ai_screening_project_track/src/Entity/ProjectTrack.php:149
 msgid "Project track configuration"
-msgstr "Projektsporskonfiguration"
+msgstr "Screeningssporskonfiguration"
 
 #: modules/custom/ai_screening_project_track/ai_screening_project_track.install:16 modules/custom/ai_screening_project_track/src/Entity/ProjectTrack.php:150
 msgid "Configuration for the track."
@@ -47,19 +47,19 @@ msgstr "Konfiguration for sporet."
 
 #: modules/custom/ai_screening_project_track/ai_screening_project_track.install:30 modules/custom/ai_screening_project_track/src/Entity/ProjectTrack.php:121
 msgid "Project track evaluation overridden"
-msgstr "Projektsporsevaluering tilsidesat"
+msgstr "Screeningssporsevaluering tilsidesat"
 
 #: modules/custom/ai_screening_project_track/ai_screening_project_track.install:31
 msgid "The overridden evaluation of the project track"
-msgstr "Den tilsidesatte evaluering af projektsporet"
+msgstr "Den tilsidesatte evaluering af screeningssporet"
 
 #: modules/custom/ai_screening_project_track/ai_screening_project_track.info.yml:0
 msgid "AI Screening project track"
-msgstr "AI Screening projektspor"
+msgstr "AI Screening screeningsspor"
 
 #: modules/custom/ai_screening_project_track/ai_screening_project_track.info.yml:0
 msgid "Adds project track entity and functionality"
-msgstr "Tilføjer projektsporsentitet og funktionalitet"
+msgstr "Tilføjer screeningssporsentitet og funktionalitet"
 
 #: modules/custom/ai_screening_project_track/ai_screening_project_track.info.yml:0
 msgid "Custom"
@@ -143,51 +143,51 @@ msgstr "Type"
 
 #: modules/custom/ai_screening_project_track/src/Entity/ProjectTrack.php:104
 msgid "The type of the project track, as defined by taxonommy term"
-msgstr "Typen af projektspor, som defineret af taxonomibegreb"
+msgstr "Typen af screeningsspor, som defineret af taxonomibegreb"
 
 #: modules/custom/ai_screening_project_track/src/Entity/ProjectTrack.php:109
 msgid "Project track title"
-msgstr "Projektsporets titel"
+msgstr "Screeningssporets titel"
 
 #: modules/custom/ai_screening_project_track/src/Entity/ProjectTrack.php:110
 msgid "The title of the project track."
-msgstr "Titlen på projektsporet."
+msgstr "Titlen på screeningssporet."
 
 #: modules/custom/ai_screening_project_track/src/Entity/ProjectTrack.php:113
 msgid "Project track description"
-msgstr "Projektsporets beskrivelse"
+msgstr "Screeningssporets beskrivelse"
 
 #: modules/custom/ai_screening_project_track/src/Entity/ProjectTrack.php:114
 msgid "A description of the project track."
-msgstr "En beskrivelse af projektsporet."
+msgstr "En beskrivelse af screeningssporet."
 
 #: modules/custom/ai_screening_project_track/src/Entity/ProjectTrack.php:117
 msgid "Project track evaluation"
-msgstr "Projektsporets evaluering"
+msgstr "Screeningssporets evaluering"
 
 #: modules/custom/ai_screening_project_track/src/Entity/ProjectTrack.php:118
 msgid "The evaluation of the project track."
-msgstr "Evalueringen af projektsporet."
+msgstr "Evalueringen af screeningssporet."
 
 #: modules/custom/ai_screening_project_track/src/Entity/ProjectTrack.php:122
 msgid "The overridden evaluation of the project track."
-msgstr "Den tilsidesatte evaluering af projektsporet."
+msgstr "Den tilsidesatte evaluering af screeningssporet."
 
 #: modules/custom/ai_screening_project_track/src/Entity/ProjectTrack.php:125
 msgid "Project track note"
-msgstr "Projektsporets note"
+msgstr "Screeningssporets note"
 
 #: modules/custom/ai_screening_project_track/src/Entity/ProjectTrack.php:126
 msgid "A note related to project track evaluation."
-msgstr "En note relateret til evaluering af projektsporet."
+msgstr "En note relateret til evaluering af screeningssporet."
 
 #: modules/custom/ai_screening_project_track/src/Entity/ProjectTrack.php:129
 msgid "Project track status"
-msgstr "Projektsporets status"
+msgstr "Screeningssporets status"
 
 #: modules/custom/ai_screening_project_track/src/Entity/ProjectTrack.php:130
 msgid "The status of the project track."
-msgstr "Statusen på projektsporet."
+msgstr "Statusen på screeningssporet."
 
 #: modules/custom/ai_screening_project_track/src/Entity/ProjectTrack.php:133 modules/custom/ai_screening_project_track/src/Entity/ProjectTrackTool.php:112
 msgid "Authored on"
@@ -195,7 +195,7 @@ msgstr "Skrevet den"
 
 #: modules/custom/ai_screening_project_track/src/Entity/ProjectTrack.php:134
 msgid "The time that the project track was created."
-msgstr "Tidspunktet hvor projektsporet blev oprettet."
+msgstr "Tidspunktet hvor screeningssporet blev oprettet."
 
 #: modules/custom/ai_screening_project_track/src/Entity/ProjectTrack.php:137 modules/custom/ai_screening_project_track/src/Entity/ProjectTrackTool.php:116
 msgid "Changed"
@@ -203,11 +203,11 @@ msgstr "Ændret"
 
 #: modules/custom/ai_screening_project_track/src/Entity/ProjectTrack.php:138
 msgid "The time that the project track was last edited."
-msgstr "Tidspunktet hvor projektsporet sidst blev redigeret."
+msgstr "Tidspunktet hvor screeningssporet sidst blev redigeret."
 
 #: modules/custom/ai_screening_project_track/src/Entity/ProjectTrack.php:141
 msgid "Project"
-msgstr "Projekt"
+msgstr "Screening"
 
 #: modules/custom/ai_screening_project_track/src/Entity/ProjectTrack.php:146
 msgid "Delta"
@@ -215,27 +215,27 @@ msgstr "Delta"
 
 #: modules/custom/ai_screening_project_track/src/Entity/ProjectTrack.php:18 modules/custom/ai_screening_project_track/src/Entity/ProjectTrackTool.php:91
 msgid "Project track"
-msgstr "Projektspor"
+msgstr "Screeningsspor"
 
 #: modules/custom/ai_screening_project_track/src/Entity/ProjectTrack.php:18
 msgid "Project tracks"
-msgstr "Projektspor"
+msgstr "Screeningsspor"
 
 #: modules/custom/ai_screening_project_track/src/Entity/ProjectTrack.php:18
 msgid "project track"
-msgstr "projektspor"
+msgstr "screeningsspor"
 
 #: modules/custom/ai_screening_project_track/src/Entity/ProjectTrack.php:18
 msgid "project tracks"
-msgstr "projektspor"
+msgstr "screeningsspor"
 
 #: modules/custom/ai_screening_project_track/src/Entity/ProjectTrackTool.php:95
 msgid "Project track tool status"
-msgstr "Status for projektsporsværktøj"
+msgstr "Status for screeningssporsværktøj"
 
 #: modules/custom/ai_screening_project_track/src/Entity/ProjectTrackTool.php:96
 msgid "The status of the project track tool."
-msgstr "Statusen for projektsporsværktøjet."
+msgstr "Statusen for screeningssporsværktøjet."
 
 #: modules/custom/ai_screening_project_track/src/Entity/ProjectTrackTool.php:99
 msgid "Tool entity type"
@@ -263,11 +263,11 @@ msgstr "Data der matcher værktøjets konfiguration"
 
 #: modules/custom/ai_screening_project_track/src/Entity/ProjectTrackTool.php:113
 msgid "The time that the project track tool was created."
-msgstr "Tidspunktet hvor projektsporsværktøjet blev oprettet."
+msgstr "Tidspunktet hvor screeningssporsværktøjet blev oprettet."
 
 #: modules/custom/ai_screening_project_track/src/Entity/ProjectTrackTool.php:117
 msgid "The time that the project track tool was last edited."
-msgstr "Tidspunktet hvor projektsporsværktøjet sidst blev redigeret."
+msgstr "Tidspunktet hvor screeningssporsværktøjet sidst blev redigeret."
 
 #: modules/custom/ai_screening_project_track/src/Entity/ProjectTrackTool.php:120
 msgid "Dalte"
@@ -307,11 +307,11 @@ msgstr "Vis"
 
 #: modules/custom/ai_screening_project_track/src/Form/ProjectTrackForm.php:149;150
 msgid "New project track %label has been created."
-msgstr "Nyt projektspor %label er blevet oprettet."
+msgstr "Nyt screeningsspor %label er blevet oprettet."
 
 #: modules/custom/ai_screening_project_track/src/Form/ProjectTrackForm.php:154;155
 msgid "The project track %label has been updated."
-msgstr "Projektsporet %label er blevet opdateret."
+msgstr "Screeningssporet %label er blevet opdateret."
 
 #: modules/custom/ai_screening_project_track/src/Form/ProjectTrackToolForm.php:29;30
 msgid "New tool %label has been created."
