--- a/web/themes/custom/itkdev/itkdev_project_theme/translations/itkdev_project_theme.da.po
+++ b/web/themes/custom/itkdev/itkdev_project_theme/translations/itkdev_project_theme.da.po
@@ -47,11 +47,11 @@ msgstr ""
 
 #: themes/custom/itkdev/itkdev_project_theme/itkdev_project_theme.info.yml:0
 msgid "ITK-dev Project Theme"
-msgstr "ITK-dev Projekttema"
+msgstr "ITK-dev Screeningstema"
 
 #: themes/custom/itkdev/itkdev_project_theme/itkdev_project_theme.info.yml:0
 msgid "Project theme"
-msgstr "Projekttema"
+msgstr "Screeningstema"
 
 #: themes/custom/itkdev/itkdev_project_theme/itkdev_project_theme.info.yml:0
 msgid "itkdev"
@@ -115,11 +115,11 @@ msgstr "Vil vi?"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/node--project.html.twig:67
 msgid "Project eveluation of whether it should be used"
-msgstr "Projektevaluering af om det skal bruges"
+msgstr "Screeningsevaluering af om det skal bruges"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/node--project.html.twig:68
 msgid "See project report"
-msgstr "Se projektrapport"
+msgstr "Se screeningsrapport"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/node--project.html.twig:93
 msgid "View report"
@@ -155,7 +155,7 @@ msgstr "Rapport: @node_label"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/reports-project-track.html.twig:15;18
 msgid "Report: Project tracks"
-msgstr "Rapport: Projektspor"
+msgstr "Rapport: Screeningsspor"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/reports-project-track.html.twig:50
 msgid "The graph shows the automatically calculated evaluation."
@@ -163,7 +163,7 @@ msgstr "Grafen viser den automatisk beregnede evaluering."
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/reports-project-track.html.twig:54
 msgid "This project has been manually evaluated."
-msgstr "Dette projekt er blevet manuelt evalueret."
+msgstr "Denne screening er blevet manuelt evalueret."
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/reports-project-track.html.twig:59 themes/custom/itkdev/itkdev_project_theme/templates/components/reportsMultiProjectTable.html.twig:8 themes/custom/itkdev/itkdev_project_theme/templates/form/project-track-edit-form.html.twig:55
 msgid "System evaluation"
@@ -199,7 +199,7 @@ msgstr "Rapport: @label"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/reports-project.html.twig:19
 msgid "Project tracks"
-msgstr "Projektspor"
+msgstr "Screeningsspor"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/reports-project.html.twig:34
 msgid "Create report for \"@trackLabel\" track"
@@ -215,13 +215,13 @@ msgstr "Opsæt forside"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/site-setup.html.twig:32 themes/custom/itkdev/itkdev_project_theme/templates/form/form--ai-screening-project-track-thresholds.html.twig:18
 msgid "Setup project track thresholds"
-msgstr "Opsæt tærskelværdier for projektspor"
+msgstr "Opsæt tærskelværdier for screeningsspor"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/site-setup.html.twig:36
 msgid "Set up thresholds for each project. The thresholds are used to determine when a suggested project track evaluation changes from \"Refused\" to \"Undecided\" to \"Approved\""
 msgstr ""
-"Opsæt tærskelværdier for hvert projekt. Tærskelværdierne bruges "
-"til at bestemme, hvornår en foreslået projektsporsevaluering ændres "
+"Opsæt tærskelværdier for hver screening. Tærskelværdierne bruges "
+"til at bestemme, hvornår en foreslået screeningssporsevaluering ændres "
 "fra \"Afvist\" til \"Uafklaret\" til \"Godkendt\""
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/site-setup.html.twig:41
@@ -231,20 +231,20 @@ msgstr "Opsæt tærskelværdier"
 #: themes/custom/itkdev/itkdev_project_theme/templates/stats-top-block.html.twig:18
 msgid "Project that complies to all demands for use"
 msgid_plural "Projects that comply to all demands for use"
-msgstr[0] "Projekt der opfylder alle krav til brug"
-msgstr[1] "Projekter der opfylder alle krav til brug"
+msgstr[0] "Screening der opfylder alle krav til brug"
+msgstr[1] "Screeninger der opfylder alle krav til brug"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/stats-top-block.html.twig:28
 msgid "Project that complies to some demands for use"
 msgid_plural "Projects that comply to some demands for use"
-msgstr[0] "Projekt der opfylder nogle krav til brug"
-msgstr[1] "Projekter der opfylder nogle krav til brug"
+msgstr[0] "Screening der opfylder nogle krav til brug"
+msgstr[1] "Screeninger der opfylder nogle krav til brug"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/stats-top-block.html.twig:38
 msgid "Project that does not comply to the demands for use"
 msgid_plural "Projects that do not comply to the demands for use"
-msgstr[0] "Projekt der ikke opfylder kravene til brug"
-msgstr[1] "Projekter der ikke opfylder kravene til brug"
+msgstr[0] "Screening der ikke opfylder kravene til brug"
+msgstr[1] "Screeninger der ikke opfylder kravene til brug"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/user.html.twig:39
 msgid "User mail"
@@ -276,7 +276,7 @@ msgstr "Luk navigationsmenu"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/components/new-project-button.html.twig:6 themes/custom/itkdev/itkdev_project_theme/templates/views/views-view-table--front.html.twig:51
 msgid "Create new project"
-msgstr "Opret nyt projekt"
+msgstr "Opret ny screening"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/components/project-status.html.twig:22
 msgid "Refused"
@@ -292,11 +292,11 @@ msgstr "Godkendt"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/components/reportsMultiProjectTable.html.twig:3
 msgid "Project evaluations"
-msgstr "Projektevalueringer"
+msgstr "Screeningsevalueringer"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/components/reportsMultiProjectTable.html.twig:7
 msgid "Project name"
-msgstr "Projektnavn"
+msgstr "Screeningsnavn"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/components/tablesort-indicator.html.twig:22
 msgid "Sort ascending"
@@ -369,9 +369,9 @@ msgstr ""
 #: themes/custom/itkdev/itkdev_project_theme/templates/form/form--ai-screening-project-track-thresholds.html.twig:24
 msgid "Define thresholds for all projects. This is used by the system to make a suggested evaluation by measuring all the combined answers of each project track against the corresponding thresholds."
 msgstr ""
-"Definer tærskelværdier for alle projekter. Dette bruges af systemet "
+"Definer tærskelværdier for alle screeninger. Dette bruges af systemet "
 "til at lave en foreslået evaluering ved at måle alle de kombinerede "
-"svar for hvert projektspor mod de tilsvarende tærskelværdier."
+"svar for hvert screeningsspor mod de tilsvarende tærskelværdier."
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/form/form--user-form.html.twig:18
 msgid "Update user profile"
@@ -403,5 +403,5 @@ msgstr "Seneste"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/views/views-view-table--front.html.twig:137
 msgid "Show all projects"
-msgstr "Vis alle projekter"
+msgstr "Vis alle screeninger"
 
