Replaced "project" with "screening"

--- a/config/sync/language/da/group.type.project_group.yml
+++ b/config/sync/language/da/group.type.project_group.yml
@@ -1,2 +1,2 @@
-label: Projectgruppe
-description: "A group that works on a project."
+label: Screeninggruppe
+description: "A group that works on a screening."
