--- a/web/modules/custom/ai_screening_reports/translations/ai_screening_reports.da.po
+++ b/web/modules/custom/ai_screening_reports/translations/ai_screening_reports.da.po
@@ -47,7 +47,7 @@ msgid "Create report"
 msgstr "Opret rapport"
 
 #: modules/custom/ai_screening_reports/ai_screening_reports.routing.yml:0;0
-msgid "Project"
+msgid "Screening"
 msgstr "Screening"
 
 #: modules/custom/ai_screening_reports/src/Controller/AiScreeningReportsController.php:126
@@ -59,10 +59,9 @@ msgid "Incorrect url parameters."
 msgstr "Forkerte URL-parametre."
 
 #: modules/custom/ai_screening_reports/src/Form/CreateReport.php:54
-msgid "Select project"
+msgid "Select screening"
 msgstr "Vælg screening"
 
 #: modules/custom/ai_screening_reports/src/Form/CreateReport.php:63
 msgid "Fetch report"
 msgstr "Hent rapport"
-
