--- a/web/modules/custom/ai_screening_project/translations/ai_screening_project.da.po
+++ b/web/modules/custom/ai_screening_project/translations/ai_screening_project.da.po
@@ -36,31 +36,31 @@ msgid "Custom"
 msgstr "Tilpasset"
 
 #: modules/custom/ai_screening_project/ai_screening_project.routing.yml:0
-msgid "Confirm Project Changes"
+msgid "Confirm Screening Changes"
 msgstr "Bekræft screeningsændringer"
 
 #: modules/custom/ai_screening_project/src/BreadcrumbBuilder.php:68
-msgid "Projects"
+msgid "Screenings"
 msgstr "Screeninger"
 
 #: modules/custom/ai_screening_project/src/BreadcrumbBuilder.php:71
-msgid "Create new project"
+msgid "Create new screening"
 msgstr "Opret ny screening"
 
 #: modules/custom/ai_screening_project/src/Form/ProjectNodeConfirmForm.php:65
-msgid "Are you sure you want to save the project \"@title\"?"
+msgid "Are you sure you want to save the screening \"@title\"?"
 msgstr "Er du sikker på at du vil gemme screeningen \"@title\"?"
 
 #: modules/custom/ai_screening_project/src/Form/ProjectNodeConfirmForm.php:79
-msgid "Deactivating a project will disable further work on the project and archive it. Reactivation of the project requires site administrative privileges."
+msgid "Deactivating a screening will disable further work on the screening and archive it. Reactivation of the screening requires site administrative privileges."
 msgstr "Deaktivering af screeningen vil forhindre yderligere arbejde på screeningen og arkivere det. Reaktivering af screeningen kræver administrator adgang på sitet."
 
 #: modules/custom/ai_screening_project/src/Form/ProjectNodeConfirmForm.php:86
-msgid "Save project"
+msgid "Save screening"
 msgstr "Gem screening"
 
 #: modules/custom/ai_screening_project/src/Form/ProjectNodeConfirmForm.php:114
-msgid "Project \"@title\" has been updated."
+msgid "Screening \"@title\" has been updated."
 msgstr "Screening \"@title\" er blevet opdateret."
 
 #: modules/custom/ai_screening_project/src/Helper/ProjectHelper.php:239
@@ -68,15 +68,15 @@ msgid "Corrupted"
 msgstr "Beskadiget"
 
 #: modules/custom/ai_screening_project/src/Helper/ProjectHelper.php:240
-msgid "If the project or related entities are corrupted."
+msgid "If the screening or related entities are corrupted."
 msgstr "Hvis screeningen eller relaterede entiteter er beskadiget."
 
 #: modules/custom/ai_screening_project/src/Helper/ProjectHelper.php:356
-msgid "Project group"
+msgid "Screening group"
 msgstr "Projectgruppe"
 
 #: modules/custom/ai_screening_project/src/Helper/ProjectHelper.php:361
-msgid "Project owner"
+msgid "Screening owner"
 msgstr "Screeningsejer"
 
 #: modules/custom/ai_screening_project/src/Helper/ProjectHelper.php:370
@@ -84,15 +84,15 @@ msgid "Contributors"
 msgstr "Bidragydere"
 
 #: modules/custom/ai_screening_project/src/Helper/ProjectHelper.php:371
-msgid "Which users are allowed to contribute to this project"
+msgid "Which users are allowed to contribute to this screening"
 msgstr "Hvilke brugere har tilladelse til at bidrage til denne screening"
 
 #: modules/custom/ai_screening_project/src/Helper/ProjectHelper.php:398
-msgid "Project owner must be a contributor."
+msgid "Screening owner must be a contributor."
 msgstr "Screeningsejeren skal være bidragyder."
 
 #: modules/custom/ai_screening_project/src/Helper/ProjectHelper.php:158
-msgid "Error deleting project: @message"
+msgid "Error deleting screening: @message"
 msgstr "Fejl ved sletning af screening: @message"
 
 #: modules/custom/ai_screening_project/src/Helper/ProjectHelper.php:181
@@ -104,10 +104,9 @@ msgid "Error creating groups: @message"
 msgstr "Fejl ved oprettelse af grupper: @message"
 
 #: modules/custom/ai_screening_project/src/Helper/ProjectHelper.php:574
-msgid "Error creating project tracks: @message"
+msgid "Error creating screening tracks: @message"
 msgstr "Fejl ved oprettelse af screeningsspor: @message"
 
 #: modules/custom/ai_screening_project/src/Plugin/Block/FrontpageStatsTopBlock.php:20
 msgid "Frontpage stats top"
 msgstr "Forside statistik top"
-
