Replaced "aarhus kommune" with "kommunen"

--- a/config/translations/config.da.po
+++ b/config/translations/config.da.po
@@ -3343,7 +3343,7 @@ msgid ""
 "'#type': text_format\n"
 "    '#title': '1.1 Gennemsigtighed i "
 "anvendelsen af kunstig intelligens'\n"
-"    '#help': '<p>Aarhus Kommune "
+"    '#help': '<p>Kommunen "
 "ønsker at gøre det tydeligt, hvordan en kunstig intelligens har "
 "medvirket i bearbejdningen af borgernes data eller i udformningen af "
 "et svar til borgeren.</p><p>I svaret skal der redegøres for, om og "
@@ -3413,7 +3413,7 @@ msgid ""
 "til AI-løsninger er borgernes mulighed for at kontrollere løsningens "
 "bidrag til et samlet output og korrigere for mulige fejlantagelser "
 "eller fejl-output. Borgere skal i den forbindelse have mulighed for at "
-"gennemskue, hvordan medarbejdere i Aarhus Kommune har anvendt en given "
+"gennemskue, hvordan medarbejdere i kommunen har anvendt en given "
 "AI-løsning, og den måde nået frem til et resultat.</p><p>I svaret "
 "skal der redegøres for, om og hvordan løsningen har indbygget "
 "muligheden for menneskelig verififikation af output.</p>'\n"
@@ -3673,13 +3673,13 @@ msgid ""
 "    "
 "'#type': text_format\n"
 "    '#title': '3.2 Betydning for omverdenens "
-"opfattelse af Aarhus Kommune'\n"
+"opfattelse af kommunen'\n"
 "    '#help': '<p>I nogle tilfælde kan "
 "introduktionen af en AI-løsning betyde, at borgere og virksomheder "
 "oplever, at de føler sig distancerede fra kommunen, der kan opfattes "
 "som for teknokratisk orienteret.</p><p>Det er derfor vigtigt at "
 "vurdere, hvorvidt indførelsen af en given AI-løsning kan medføre, "
-"at Aarhus Kommunes omdømme påvirkes negativt, og om denne effekt kan "
+"at kommunens omdømme påvirkes negativt, og om denne effekt kan "
 "modvirkes.</p>'\n"
 "    '#help_display': element_before\n"
 "    "
@@ -4188,4 +4188,3 @@ msgid ""
 " "
 "         value: '0'"
 msgstr ""
-
