Updated translation files

--- a/translations/contrib-translations.da.po
+++ b/translations/contrib-translations.da.po
@@ -3,8 +3,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
-"POT-Creation-Date: 2026-01-28 13:41+0100\n"
-"PO-Revision-Date: 2026-01-28 13:41+0100\n"
+"POT-Creation-Date: 2026-01-28 14:12+0100\n"
+"PO-Revision-Date: 2026-01-28 14:12+0100\n"
 "Last-Translator: NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <EMAIL@ADDRESS>\n"
 "MIME-Version: 1.0\n"
@@ -933,7 +933,7 @@ msgstr "Ikke offentlig"
 
 msgctxt "project"
 msgid "Public"
-msgstr "Offentlig"
+msgstr "Tillad kiggeadgang"
 
 msgctxt "project"
 msgid ""
@@ -947,8 +947,6 @@ msgctxt "project"
 msgid ""
 "Public screenings can be <em>viewed by all users</em>. Non-public "
 "screenings can be viewed by editors only."
-msgstr ""
-"Offentlige screeninger kan <em>ses af alle brugere</em>. "
-"Ikke-offentlige screeninger kan kun ses af redaktører."
+msgstr "👀"
 
 
